# flaxoil

./: README.md  pyproject.toml  requirements.lock.txt
.github/workflows/: test.yml
examples/: examples.md  ltc_rnn.py  quickstart.py
src/flaxoil/: __init__.py
src/flaxoil/ltc/: __init__.py  ltc_cell.py
src/flaxoil/wirings/: __init__.py  random.py  wirings.py
src/flaxoil/wirings/test/: test_random.py  test_wirings.py
tests/: test_ltc.py
