[build-system]
requires = ["setuptools>=69.0.0", "setuptools_scm>=8.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "flaxoil"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
  "jax>=0.4.24",
  "flax>=0.8.0",
]
authors = [
  { name="Mohammed Nawabuddin", email="MNahad@users.noreply.github.com" },
]
description = "Liquid Neural Networks on Flax"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/mnahad/flaxoil"

[tool.setuptools_scm]
